GGB-2047 fix help btn contrast ratio
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@56318 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/colors.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/colors.scss
@@ -27,7 +27,7 @@ $button-border: rgb(169, 169, 169);
 $marble-border: #ccccff;
 $selected-menuitem-background: #eeeeee;
 $zoomBtnBckg: #525659;/*#777*/
-$snackbar-background: #323232;
+$snackbar-background: #303030;
 
 $white: rgb(255, 255, 255);
 $white-30: rgba(255, 255, 255, 0.3);
